Code smells fixed